GNOME Bugzilla – Bug 724573
Fix some runtime warnings
Last modified: 2014-02-18 08:09:14 UTC
See attached patches
Created attachment 269457 [details] [review] updates: don't use changed signal on UpClient This was removed recently from upower; connect to the notification of the property we're interested in instead.
Created attachment 269458 [details] [review] rfkill: fix signal emission with no connection Since the asynchronous session bus request might still not have completed by the time we try to sync one of the properties coming from ModemManager/NetworkManager, move the (connection != NULL) check in engine_properties_changed(), to avoid trying to emit a signal on a NULL connection.
Created attachment 269459 [details] [review] rfkill: clear id after unowning bus name Or we'll try to unown the same bus id again next time gsd_rfkill_manager_stop() is called.
Review of attachment 269458 [details] [review]: Sure.
Review of attachment 269459 [details] [review]: Yep.
Comment on attachment 269458 [details] [review] rfkill: fix signal emission with no connection Already fixed in bug 712168.
Review of attachment 269457 [details] [review]: Looks good.
Attachment 269457 [details] pushed as 772aaac - updates: don't use changed signal on UpClient Attachment 269459 [details] pushed as 04cfff8 - rfkill: clear id after unowning bus name