updates: don't use changed signal on UpClient

This was removed recently from upower; connect to the notification of
the property we're interested in instead.

https://bugzilla.gnome.org/show_bug.cgi?id=724573